--- a/app/pom.xml
+++ b/app/pom.xml
@@ -12,6 +12,10 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.5.RELEASE</version>
     </parent>
+<modules>
+    <module>server</module>
+    <module>springapp</module>
+  </modules>
 
     <dependencies>
         <dependency>
